--- a/YAZLAB2/Views/Account/ResetPassword.cshtml
+++ b/YAZLAB2/Views/Account/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model YAZLAB2.Models.ResetPasswordViewModel
 @if (TempData["Message"] != null)
 {
-    var messageType = TempData["MessageType"]?.ToString() ?? "info"; // Varsayılan mesaj tipi "info"
+    var messageType = TempData["MessageType"]?.ToString() ?? "info"; 
     <div class="alert alert-@messageType">
         @TempData["Message"]
     </div>
