--- a/YAZLAB2/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/YAZLAB2/Views/Account/ResetPasswordConfirmation.cshtml
@@ -2,7 +2,7 @@
 <p>Şifreniz başarıyla sıfırlandı. Yeni şifrenizle giriş yapabilirsiniz.</p>
 @if (TempData["Message"] != null)
 {
-    var messageType = TempData["MessageType"]?.ToString() ?? "info"; // Varsayılan mesaj tipi "info"
+    var messageType = TempData["MessageType"]?.ToString() ?? "info";
     <div class="alert alert-@messageType">
         @TempData["Message"]
     </div>
