--- a/YAZLAB2/Views/Account/ForgotPassword.cshtml
+++ b/YAZLAB2/Views/Account/ForgotPassword.cshtml
@@ -5,7 +5,7 @@
 }
 @if (TempData["Message"] != null)
 {
-    var messageType = TempData["MessageType"]?.ToString() ?? "info"; // Varsayılan mesaj tipi "info"
+    var messageType = TempData["MessageType"]?.ToString() ?? "info"; 
     <div class="alert alert-@messageType">
         @TempData["Message"]
     </div>
@@ -17,9 +17,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"]</title>
-    <!-- Bootstrap CSS -->
+   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-    <!-- Custom CSS -->
+   
     <style>
         body {
             margin: 0;
@@ -42,7 +42,7 @@
             }
 
         .container {
-            margin-top: 100px; /* To ensure content is below the header */
+            margin-top: 100px; 
             max-width: 400px;
             background: #fff;
             padding: 20px 25px;
@@ -88,7 +88,7 @@
             <button type="submit" class="btn btn-primary">Şifre Sıfırlama Linki Gönder</button>
         </form>
     </div>
-    <!-- Bootstrap JS -->
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
