--- a/YAZLAB2/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/YAZLAB2/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,7 +2,7 @@
 <p>E-posta adresinize şifre sıfırlama onay kodu gönderildi.</p>
 @if (TempData["Message"] != null)
 {
-    var messageType = TempData["MessageType"]?.ToString() ?? "info"; // Varsayılan mesaj tipi "info"
+    var messageType = TempData["MessageType"]?.ToString() ?? "info"; 
     <div class="alert alert-@messageType">
         @TempData["Message"]
     </div>
