--- a/YAZLAB2/Views/User/Register.cshtml
+++ b/YAZLAB2/Views/User/Register.cshtml
@@ -78,7 +78,7 @@
 
                 <div class="form-group mb-3">
                     <label for="IlgiAlanlari" class="form-label">İlgi Alanları</label>
-                    <div>
+                    <div class="d-flex flex-wrap gap-3">
                         @foreach (var kategori in Model.Kategoriler)
                         {
                             <div class="form-check">
@@ -98,6 +98,7 @@
                         }
                     </div>
                 </div>
+
 
                 <div class="row">
                     <div class="form-group col-md-6 mb-3">
