--- a/YAZLAB2/Views/Admin/TumPuanlar.cshtml
+++ b/YAZLAB2/Views/Admin/TumPuanlar.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<YAZLAB2.Models.Puan>
+﻿@model IEnumerable<dynamic>
 
 @{
     ViewData["Title"] = "Tüm Kullanıcıların Puanları";
@@ -11,11 +11,12 @@
 @if (Model.Any())
 {
     <div class="table-responsive">
-        <table class="table table-striped table-bordered">
+        <table class="table">
             <thead>
                 <tr>
-                    <th>Kullanıcı ID</th>
-                    <th>Puan</th>
+                    <th>Puan ID</th>
+                    <th>Kullanıcı Adı</th>
+                    <th>Puan Değeri</th>
                     <th>Kazanılan Tarih</th>
                 </tr>
             </thead>
@@ -23,9 +24,10 @@
                 @foreach (var puan in Model)
                 {
                     <tr>
-                        <td>@puan.KullaniciID</td>
+                        <td>@puan.PuanId</td>
+                        <td>@puan.UserName</td>
                         <td>@puan.PuanDegeri</td>
-                        <td>@puan.KazanilanTarih.ToString("yyyy-MM-dd HH:mm")</td>
+                        <td>@puan.KazanilanTarih</td>
                     </tr>
                 }
             </tbody>
